# empathetic-reachy-mini

./: .env.example  .gitignore  README.md  main_core.py  pyproject.toml  requirements.txt
core/empathetic_reachy/: __init__.py  config.py  conversation_manager.py  emotion_analyzer.py  gesture_controller.py  head_mirroring.py  list_microphone.py  voice_animator.py
